[gd_scene load_steps=2 format=3 uid="uid://dux1xa8wfha83"]

[ext_resource type="Script" path="res://GUI.gd" id="1_ennpc"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ennpc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="ChessBoard" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 648.0
offset_bottom = 648.0
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="BoardGrid" type="GridContainer" parent="ChessBoard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -312.0
offset_right = 312.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="TestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 846.0
offset_top = 35.0
offset_right = 977.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 40
text = "Test"

[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
